<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <!-- Launch-related strings. -->
    <string name="app_name">Speed HUD</string>
    <string name="show_speed_hud_voice_trigger">show speed</string>
    
    <string name="uom_kmh">km/h</string>
    <string name="uom_mph">mph</string>
    <string name="uom_kt">kt</string>
    <string name="uom_mps">m/s</string>
    
    <!-- Strings describing locations. -->
    <string-array name="direction_abbreviations">
        <item>N</item>
        <item>NNE</item>
        <item>NE</item>
        <item>ENE</item>
        <item>E</item>
        <item>ESE</item>
        <item>SE</item>
        <item>SSE</item>
        <item>S</item>
        <item>SSW</item>
        <item>SW</item>
        <item>WSW</item>
        <item>W</item>
        <item>WNW</item>
        <item>NW</item>
        <item>NNW</item>
    </string-array>

    <!-- Spoken strings. -->
    <string name="spoken_heading_format">%1$d degrees %2$s</string>
    <string name="spoken_heading_format_one">%1$d degree %2$s</string>
    <string name="place_text_format">%1$s (%2$s km)</string>
    <string-array name="spoken_directions">
        <item>north</item>
        <item>north north east</item>
        <item>north east</item>
        <item>east north east</item>
        <item>east</item>
        <item>east south east</item>
        <item>south east</item>
        <item>south south east</item>
        <item>south</item>
        <item>south south west</item>
        <item>south west</item>
        <item>west south west</item>
        <item>west</item>
        <item>west north west</item>
        <item>north west</item>
        <item>north north west</item>
    </string-array>

    <!-- Warning messages. -->
    <string name="pitch_too_steep">Keep Glass horizontal to use the compass</string>
    <string name="magnetic_interference">Glass is detecting too much interference</string>

    <!-- Menu item strings. -->
    <string name="read_aloud">Read aloud</string>
    <string name="stop">Stop</string>

</resources>
